--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "CLIENT_ID": "client id",
-    "CLIENT_SECRET": "client secret",
-    "CLIENT_BOT_TOKEN": "bot token",
-    "CLIENT_REDIRECT": "/auth/redirect",
-    "CLIENT_URL": "website url",
+    "CLIENT_ID": "865130927850782741",
+    "CLIENT_SECRET": "kwFuVzQ7inNqHeTm13nUKN3PEjmfsJta",
+    "CLIENT_BOT_TOKEN": "ODY1MTMwOTI3ODUwNzgyNzQx.YO_h9g.Oudw_R_ZGZZnNweg8QM29p3bHKA",
+    "CLIENT_REDIRECT": "/auth/redirect/",
+    "CLIENT_URL": "https://exciting-quintessential-feelint/g.glitch.me/auth/redirect/",
     "CLIENT_PORT": 3000,
-    "MONGO_URL": "mongo atlas url"
+    "MONGO_URL": "mongodb+srv://r4:niki1290Q@cluster0.aylxs.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 }
